fixing the footer image sizes + alignment

--- a/styles/stylesheet.css
+++ b/styles/stylesheet.css
@@ -211,9 +211,9 @@ body > .banner {
 }
 
 #footer {
-  height: 250px;
+  height: 256px;
   display: grid;
-  grid-template-columns: 250px 1fr;
+  grid-template-columns: 256px 1fr;
   z-index: 1;
   position: relative;
 }
